--- a/interfaces/PA-App/ngx-translate-lint.config.json
+++ b/interfaces/PA-App/ngx-translate-lint.config.json
@@ -2,8 +2,8 @@
   "project": "./src/app/**/*.{html,ts}",
   "languages": "./src/assets/i18n/*.json",
   "ignore": "./src/app/services/update.service.ts, ./src/app/tabs/tabs.page.html, ./src/app/tabs/tabs.router.module.ts",
-  "views": "warning",
-  "zombies": "warning",
-  "misprint": "warning",
-  "maxWarning": 3
+  "views": "warn",
+  "zombies": "warn",
+  "misprint": "warn",
+  "maxWarnings": 0
 }
