--- a/interfaces/PA-App/ngx-translate-lint.config.json
+++ b/interfaces/PA-App/ngx-translate-lint.config.json
@@ -1,7 +1,7 @@
 {
   "project": "./src/app/**/*.{html,ts}",
   "languages": "./src/assets/i18n/*.json",
-  "ignore": "./src/app/services/update.service.ts, ./src/app/tabs/tabs.page.html, ./src/app/tabs/tabs.router.module.ts",
+  "ignore": "./src/assets/i18n/ny_MW.json",
   "views": "warn",
   "zombies": "warn",
   "misprint": "warn",
