--- a/services/121-service/package.json
+++ b/services/121-service/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://www.121.global/",
   "main": "index.js",
   "scripts": {
-    "lint": "npx eslint '**/*.ts'",
+    "lint": "npx eslint **/*.ts",
     "prestart": "npx ts-node src/scripts seed-prod && npm run migration:run",
     "start": "node index.js",
     "start:dev": "tsc-watch --onSuccess \"  node index.js  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
@@ -36,8 +36,6 @@
     "@nestjs/testing": "^6.0.1",
     "@nestjs/typeorm": "^6.0.0",
     "@nestjs/websockets": "^6.0.1",
-    "@typescript-eslint/eslint-plugin": "^1.10.2",
-    "@typescript-eslint/parser": "^1.10.2",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "crypto": "^1.0.1",
@@ -58,6 +56,8 @@
   "devDependencies": {
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.4",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
     "atob": ">=2.1.0",
     "deep-extend": ">=0.5.1",
     "eslint": "^6.0.1",
