--- a/services/PA-accounts-service/package.json
+++ b/services/PA-accounts-service/package.json
@@ -5,7 +5,7 @@
     "homepage": "https://www.121.global/",
     "main": "index.js",
     "scripts": {
-        "lint": "npx eslint '**/*.ts'",
+        "lint": "npx eslint **/*.ts",
         "prestart": "npm run migration:run",
         "start": "node index.js",
         "start:dev": "tsc-watch --onSuccess \"  node index.js  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
@@ -55,7 +55,7 @@
         "@types/node": "^12.0.4",
         "atob": ">=2.1.0",
         "deep-extend": ">=0.5.1",
-        "eslint": "^6.0.1",
+        "eslint": "^5.0.0",
         "eslint-config-prettier": "^6.0.0",
         "eslint-plugin-jest": "^22.7.1",
         "eslint-plugin-prettier": "^3.1.0",
