double quotation marks for windows

--- a/services/PA-accounts-service/package.json
+++ b/services/PA-accounts-service/package.json
@@ -5,7 +5,7 @@
     "homepage": "https://www.121.global/",
     "main": "index.js",
     "scripts": {
-        "lint": "npx eslint **/*.ts",
+        "lint": "eslint \"**/*.ts\"",
         "prestart": "npm run migration:run",
         "start": "node index.js",
         "start:dev": "tsc-watch --onSuccess \"  node index.js  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
