--- a/services/121-service/package.json
+++ b/services/121-service/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://www.121.global/",
   "main": "index.js",
   "scripts": {
-    "lint": "npx eslint **/*.ts",
+    "lint": "eslint \"**/*.ts\"",
     "prestart": "npx ts-node src/scripts seed-prod && npm run migration:run",
     "start": "node index.js",
     "start:dev": "tsc-watch --onSuccess \"  node index.js  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
