Tweak web-server config

--- a/tools/121-platform-https.conf
+++ b/tools/121-platform-https.conf
@@ -123,7 +123,8 @@
     </IfModule>
 
     <IfModule mod_dir.c>
-      IndexOptions FancyIndexing FoldersFirst IgnoreClient SuppressColumnSorting SuppressDescription SuppressIcon SuppressSize
+      IndexOptions SuppressHTMLPreamble HTMLTable FancyIndexing  FoldersFirst IgnoreClient SuppressColumnSorting SuppressDescription SuppressIcon SuppressS$
+      IndexIgnore HEADER* README* /robots.txt /favicon.ico
     </IfModule>
 
   </Directory>
