Fix typo in web-server config

--- a/tools/121-platform-https.conf
+++ b/tools/121-platform-https.conf
@@ -123,7 +123,7 @@
     </IfModule>
 
     <IfModule mod_dir.c>
-      IndexOptions SuppressHTMLPreamble HTMLTable FancyIndexing  FoldersFirst IgnoreClient SuppressColumnSorting SuppressDescription SuppressIcon SuppressS$
+      IndexOptions SuppressHTMLPreamble HTMLTable FancyIndexing  FoldersFirst IgnoreClient SuppressColumnSorting SuppressDescription SuppressIcon SuppressSize
       IndexIgnore HEADER* README* /robots.txt /favicon.ico
     </IfModule>
 
