--- a/tools/webhook.service
+++ b/tools/webhook.service
@@ -7,6 +7,7 @@ After=network.target
 Environment=NODE_ENV=production
 Environment=NODE_PORT=3099
 Environment=VERSION=v0.1.
+Environment=GLOBAL_121_REPO=/home/121-platform/
 Type=simple
 #Fill in the right user here, based on which server (global121 / global121production)
 User=global121production
