--- a/tools/webhook.service
+++ b/tools/webhook.service
@@ -3,17 +3,14 @@ Description=Github webhook
 After=network.target
 
 [Service]
-#Fill in the right server here (staging/production)
 Environment=NODE_ENV=production
 Environment=NODE_PORT=3099
 Environment=VERSION=v0.1.
 Environment=GLOBAL_121_REPO=/home/121-platform/
+Environment=GITHUB_WEBHOOK_SECRET=secret
 Type=simple
-#Fill in the right user here, based on which server (global121 / global121production)
 User=global121production
 ExecStart=/usr/bin/nodejs /home/121-platform/tools/webhook.js
-#StandardOutput=/var/log/webhook_out_log.log
-#StandardError=/var/log/webhook_err_log.log
 Restart=on-failure
 
 [Install]
