Clean config of ngx-translate-lint

--- a/interfaces/PA-App/ngx-translate-lint.config.json
+++ b/interfaces/PA-App/ngx-translate-lint.config.json
@@ -1,7 +1,7 @@
 {
   "project": "./src/app/**/*.{html,ts}",
   "languages": "./src/assets/i18n/*.json",
-  "ignore": "./src/assets/i18n/ny_MW.json",
+  "ignore": "./dist/**/*",
   "views": "warn",
   "zombies": "warn",
   "misprint": "warn",
