--- a/interfaces/PA-App/azure-pipelines.yml
+++ b/interfaces/PA-App/azure-pipelines.yml
@@ -41,6 +41,6 @@ steps:
   displayName: Tests
   workingDirectory: $(workingDir)
 
-- script: npm run build --prod
+- script: npm run build -- --prod
   displayName: Build Production-mode
   workingDirectory: $(workingDir)
