Add production-mode build step to test pipelines

--- a/interfaces/AW-App/azure-pipelines.yml
+++ b/interfaces/AW-App/azure-pipelines.yml
@@ -40,3 +40,7 @@ steps:
 - script: npm test
   displayName: Tests
   workingDirectory: $(workingDir)
+
+- script: npm run build -- --prod
+  displayName: Build Production-mode
+  workingDirectory: $(workingDir)
