--- a/interfaces/AW-App/package.json
+++ b/interfaces/AW-App/package.json
@@ -47,36 +47,36 @@
     "cordova-plugin-whitelist": "^1.3.4",
     "core-js": "2.6.8",
     "rxjs": "^6.5.5",
-    "tslib": "^1.10.0",
+    "tslib": "^1.12.0",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.13.8",
+    "@angular-devkit/architect": "^0.13.10",
     "@angular-devkit/build-angular": "~0.13.8",
-    "@angular-devkit/core": "^7.3.9",
+    "@angular-devkit/core": "^7.3.10",
     "@angular-devkit/schematics": "^7.3.10",
-    "@angular/cli": "^7.x.x",
+    "@angular/cli": "^7.3.10",
     "@angular/compiler": "^7.2.16",
     "@angular/compiler-cli": "^7.2.16",
     "@angular/language-service": "^7.2.16",
     "@ionic/angular-toolkit": "^1.5.1",
     "@types/jasmine": "~3.3.16",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^13.13.5",
+    "@types/node": "^13.13.6",
     "codelyzer": "^5.2.2",
     "cordova": "^9.0.0",
     "cordova-res": "^0.14.0",
     "dotenv": "^8.2.0",
-    "ionic": "^5.4.15",
+    "ionic": "^5.4.16",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "native-run": "^1.0.0",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.4",
     "ts-node": "~8.9.1",
     "tslint": "~5.20.1",
     "typescript": "~3.2.4"
