--- a/interfaces/AW-App/package.json
+++ b/interfaces/AW-App/package.json
@@ -33,6 +33,7 @@
     "@ionic-native/splash-screen": "^5.25.0",
     "@ionic-native/status-bar": "^5.16.0",
     "@ionic/angular": "^4.11.8",
+    "@ionic/cli": "^6.9.1",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
@@ -67,7 +68,6 @@
     "cordova": "^9.0.0",
     "cordova-res": "^0.14.0",
     "dotenv": "^8.2.0",
-    "ionic": "^5.4.16",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
