--- a/interfaces/HO-Portal/package.json
+++ b/interfaces/HO-Portal/package.json
@@ -27,6 +27,7 @@
     "@angular/service-worker": "^7.2.16",
     "@auth0/angular-jwt": "^3.0.1",
     "@ionic/angular": "^4.11.8",
+    "@ionic/cli": "^6.9.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-datatable": "^16.1.1",
@@ -52,7 +53,6 @@
     "@types/node": "^12.12.24",
     "codelyzer": "^5.2.2",
     "dotenv": "^8.2.0",
-    "ionic": "^5.4.16",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^5.0.2",
