--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -37,6 +37,7 @@
     "@ionic-native/splash-screen": "^5.23.0",
     "@ionic-native/status-bar": "^5.16.0",
     "@ionic/angular": "^4.11.8",
+    "@ionic/cli": "^6.9.1",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
@@ -75,7 +76,6 @@
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-res": "^0.14.0",
     "dotenv": "^8.2.0",
-    "ionic": "^5.4.15",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~5.0.2",
     "karma": "^4.4.1",
