--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -85,7 +85,7 @@
     "karma-jasmine-html-reporter": "^1.5.1",
     "native-run": "^0.2.9",
     "ngx-translate-lint": "^1.6.0",
-    "protractor": "~5.4.0",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.2.4"
