AB#1921 reset-db-endpoint

--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -119,6 +119,7 @@ services:
     container_name: 121-service
     environment:
       - EXTERNAL_121_SERVICE_URL=${EXTERNAL_121_SERVICE_URL}
+      - RESET_SECRET=${RESET_SECRET}
     volumes:
       - "./121-service:/home/121/services/121-service"
     ports:
