AB#1968 Modify env and config to use 121-service API url in PA-accounts service

--- a/services/.env.example
+++ b/services/.env.example
@@ -2,3 +2,7 @@ POSTGRES_PASSWORD=<password>
 WALLET_PASSWORD_ENCRYPTION_KEY=<key>
 EXTERNAL_121_SERVICE_URL=
 RESET_SECRET=
+PORT_121_SERVICE=3000
+PORT_PA_ACCOUNTS_SERVICE=3001
+SUBDOMAIN_121_SERVICE= local: servers: 121-service
+SUBDOMAIN_PA_ACCOUNTS_SERVICE= local: servers: PA-accounts
