Changed .env variables based on Elwin's feedback

--- a/services/.env.example
+++ b/services/.env.example
@@ -1,8 +1,20 @@
-POSTGRES_PASSWORD=<password>
-WALLET_PASSWORD_ENCRYPTION_KEY=<key>
-EXTERNAL_121_SERVICE_URL=
-RESET_SECRET=
+# -- All Services:
+POSTGRES_PASSWORD=
+
+# -- 121-service:
+IPV4_121_SERVICE=11.0.0.7
 PORT_121_SERVICE=3000
+RESET_SECRET=
+SUBDOMAIN_121_SERVICE=
+# SUBDOMAIN_121_SERVICE examples: local: servers: PA-accounts
+EXTERNAL_121_SERVICE_URL=
+URL_PA_ACCOUNTS_SERVICE_API=11.0.0.8:3001/api
+
+# -- PA-Accounts-service:
+IPV4_PA_ACCOUNTS_SERVICE=11.0.0.8
 PORT_PA_ACCOUNTS_SERVICE=3001
-SUBDOMAIN_121_SERVICE= local: servers: 121-service
-SUBDOMAIN_PA_ACCOUNTS_SERVICE= local: servers: PA-accounts
+SUBDOMAIN_PA_ACCOUNTS_SERVICE=
+# SUBDOMAIN_121_SERVICE examples: local: servers: 121-service
+URL_121_SERVICE_API=http://11.0.0.7:3000/api
+WALLET_PASSWORD_ENCRYPTION_KEY=
+
