--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -121,18 +121,17 @@ services:
       - EXTERNAL_121_SERVICE_URL=${EXTERNAL_121_SERVICE_URL}
       - RESET_SECRET=${RESET_SECRET}
       - PORT_121_SERVICE=${PORT_121_SERVICE}
-      - PORT_PA_ACCOUNTS_SERVICE=${PORT_PA_ACCOUNTS_SERVICE}
       - SUBDOMAIN_121_SERVICE=${SUBDOMAIN_121_SERVICE}
-      - SUBDOMAIN_PA_ACCOUNTS_SERVICE=${SUBDOMAIN_PA_ACCOUNTS_SERVICE}
+      - URL_PA_ACCOUNTS_SERVICE_API=${URL_PA_ACCOUNTS_SERVICE_API}
     volumes:
       - "./121-service:/home/121/services/121-service"
     ports:
-      - "3000:3000"
+      - "${PORT_121_SERVICE}:${PORT_121_SERVICE}"
     stdin_open: true
     tty: true
     networks:
       pool_network:
-        ipv4_address: 11.0.0.7
+        ipv4_address: ${IPV4_121_SERVICE}
     depends_on:
       - 121db
     restart: on-failure
@@ -145,19 +144,18 @@ services:
     container_name: PA-accounts-service
     environment:
       - WALLET_PASSWORD_ENCRYPTION_KEY=${WALLET_PASSWORD_ENCRYPTION_KEY}
-      - PORT_121_SERVICE=${PORT_121_SERVICE}
       - PORT_PA_ACCOUNTS_SERVICE=${PORT_PA_ACCOUNTS_SERVICE}
-      - SUBDOMAIN_121_SERVICE=${SUBDOMAIN_121_SERVICE}
       - SUBDOMAIN_PA_ACCOUNTS_SERVICE=${SUBDOMAIN_PA_ACCOUNTS_SERVICE}
+      - URL_121_SERVICE_API=${URL_121_SERVICE_API}
     volumes:
       - "./PA-accounts-service:/home/121/services/PA-accounts-service"
     ports:
-      - "3001:3001"
+      - "${PORT_PA_ACCOUNTS_SERVICE}:${PORT_PA_ACCOUNTS_SERVICE}"
     stdin_open: true
     tty: true
     networks:
       pool_network:
-        ipv4_address: 11.0.0.8
+        ipv4_address: ${IPV4_PA_ACCOUNTS_SERVICE}
     depends_on:
       - 121db
     restart: on-failure
