--- a/interfaces/.prettierignore
+++ b/interfaces/.prettierignore
@@ -1,10 +1,13 @@
 # See .gitignore
 coverage/
+
+# Ionic related files
 www/
 dist/
 platforms/
 plugins/
 resources/
+
 
 # Don't format HTML, waiting for https://github.com/prettier/prettier/pull/6644 to be possible
 *.html
