Changed .env.example and added some logs

--- a/services/.env.example
+++ b/services/.env.example
@@ -8,7 +8,7 @@ RESET_SECRET=
 SUBDOMAIN_121_SERVICE=
 # SUBDOMAIN_121_SERVICE examples: local: servers: PA-accounts
 EXTERNAL_121_SERVICE_URL=
-URL_PA_ACCOUNTS_SERVICE_API=11.0.0.8:3001/api
+URL_PA_ACCOUNTS_SERVICE_API=http://11.0.0.8:3001/api
 
 # -- PA-Accounts-service:
 IPV4_PA_ACCOUNTS_SERVICE=11.0.0.8
