--- a/interfaces/HO-Portal/package.json
+++ b/interfaces/HO-Portal/package.json
@@ -40,8 +40,8 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.13.8",
-    "@angular-devkit/build-angular": "~0.13.10",
+    "@angular-devkit/architect": "^0.13.10",
+    "@angular-devkit/build-angular": "^0.13.10",
     "@angular-devkit/core": "^7.3.10",
     "@angular-devkit/schematics": "^7.3.9",
     "@angular/cli": "^7.x.x",
