Add Prettier to PA-App

--- a/interfaces/HO-Portal/package.json
+++ b/interfaces/HO-Portal/package.json
@@ -12,8 +12,8 @@
     "test": "ng test --no-watch --browsers=ChromeHeadless",
     "test:dev": "ng test",
     "lint:syntax": "prettier --check \"**/*.{md,js,ts,scss}\"",
-    "syntax:fix": "npm run lint:syntax -- --write",
     "lint": "ng lint && npm run lint:syntax",
+    "fix:syntax": "npm run lint:syntax -- --write",
     "e2e": "ng e2e"
   },
   "private": true,
