--- a/interfaces/.prettierignore
+++ b/interfaces/.prettierignore
@@ -1,6 +1,9 @@
 # See .gitignore
-coverage
-
+coverage/
+www/
+platforms/
+plugins/
+resources/
 
 # Don't format HTML, waiting for https://github.com/prettier/prettier/pull/6644 to be possible
 *.html
