--- a/interfaces/AW-App/package.json
+++ b/interfaces/AW-App/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser": "^7.2.16",
     "@angular/platform-browser-dynamic": "^7.2.16",
     "@angular/router": "^7.2.16",
+    "@auth0/angular-jwt": "^4.1.2",
     "@ionic-native/core": "^5.24.0",
     "@ionic-native/qr-scanner": "^5.16.0",
     "@ionic-native/splash-screen": "^5.25.0",
