--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,6 +22,9 @@ updates:
   - dependency-name: tslib
     versions:
     - ">= 2"
+  - dependency-name: "@ngx-translate/http-loader"
+    versions:
+    - ">= 5"
   - dependency-name: ngx-translate-lint
     versions:
     - ">= 1.4, < 1.6.0"
@@ -48,6 +51,9 @@ updates:
   - dependency-name: tslib
     versions:
     - ">= 2"
+  - dependency-name: "@ngx-translate/http-loader"
+    versions:
+    - ">= 5"
   - dependency-name: ngx-translate-lint
     versions:
     - ">= 1.4, < 1.6.0"
@@ -74,6 +80,9 @@ updates:
   - dependency-name: tslib
     versions:
     - ">= 2"
+  - dependency-name: "@ngx-translate/http-loader"
+    versions:
+    - ">= 5"
   - dependency-name: ngx-translate-lint
     versions:
     - ">= 1.4, < 1.6.0"
