--- a/interfaces/AW-App/package.json
+++ b/interfaces/AW-App/package.json
@@ -27,7 +27,9 @@
     "@angular/http": "^7.2.16",
     "@angular/platform-browser": "^7.2.16",
     "@angular/platform-browser-dynamic": "^7.2.16",
+    "@angular/pwa": "^0.12.4",
     "@angular/router": "^7.2.16",
+    "@angular/service-worker": "^7.2.16",
     "@auth0/angular-jwt": "^4.1.2",
     "@ionic-native/core": "^5.24.0",
     "@ionic-native/qr-scanner": "^5.16.0",
