--- a/interfaces/AW-App/package.json
+++ b/interfaces/AW-App/package.json
@@ -40,6 +40,7 @@
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@zxing/ngx-scanner": "^2.0.1",
     "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-device": "^2.0.3",
