--- a/interfaces/.prettierignore
+++ b/interfaces/.prettierignore
@@ -11,3 +11,6 @@ resources/
 
 # Don't format HTML, waiting for https://github.com/prettier/prettier/pull/6644 to be possible
 *.html
+
+# Don't reorder imports for polyfills:
+src/polyfills.ts
