--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -88,6 +88,7 @@
     "native-run": "^1.0.0",
     "ngx-translate-lint": "^1.4.0",
     "prettier": "2.0.5",
+    "prettier-plugin-organize-imports": "^1.1.1",
     "protractor": "^7.0.0",
     "ts-node": "~8.10.2",
     "tslint": "~5.20.1",
