--- a/interfaces/HO-Portal/package.json
+++ b/interfaces/HO-Portal/package.json
@@ -63,6 +63,7 @@
     "karma-jasmine": "^3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "prettier": "2.0.5",
+    "prettier-plugin-organize-imports": "^1.1.1",
     "protractor": "^7.0.0",
     "ts-node": "^8.10.1",
     "tslint": "^5.20.1",
