--- a/interfaces/HO-Portal/src/ngsw-config.json
+++ b/interfaces/HO-Portal/src/ngsw-config.json
@@ -12,13 +12,15 @@
           "/*.js"
         ]
       }
-    }, {
+    },
+    {
       "name": "assets",
       "installMode": "lazy",
       "updateMode": "prefetch",
       "resources": {
         "files": [
           "/assets/**",
+          "/svg/**",
           "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
         ]
       }
