--- a/interfaces/HO-Portal/src/manifest.json
+++ b/interfaces/HO-Portal/src/manifest.json
@@ -1,11 +1,12 @@
 {
+  "$schema": "https://json.schemastore.org/web-manifest",
   "name": "HO-Portal",
   "short_name": "HO-Portal",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
-  "display": "standalone",
-  "scope": "/",
-  "start_url": "/",
+  "display": "browser",
+  "scope": "./",
+  "start_url": "./",
   "icons": [
     {
       "src": "assets/icons/icon-72x72.png",
