--- a/interfaces/HO-Portal/package.json
+++ b/interfaces/HO-Portal/package.json
@@ -9,6 +9,10 @@
     "set-env-variables": "node ./_set-env-variabes.js",
     "prebuild": "npm run set-env-variables",
     "build": "ng build",
+    "build:debug": "npm run build -- --prod --base-href=/$npm_package_name/",
+    "copy:sw-debug": "cp www/index.html www/404.html && mv www $npm_package_name && mkdir www && mv $npm_package_name www/",
+    "serve:prod": "npx http-server ./www/ -c-1",
+    "debug:service-worker": "npm run build:debug && npm run copy:sw-debug && npm run serve:prod",
     "test": "ng test --no-watch --browsers=ChromeHeadless",
     "test:dev": "ng test",
     "lint:syntax": "prettier --check \"**/*.{md,js,ts,scss}\"",
