Limit caching of Material-design icons only (to preserve space/data)

--- a/interfaces/AW-App/src/ngsw-config.json
+++ b/interfaces/AW-App/src/ngsw-config.json
@@ -21,7 +21,7 @@
       "resources": {
         "files": [
           "/assets/**",
-          "/svg/**",
+          "/svg/md*",
           "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
         ]
       }
