--- a/interfaces/HO-Portal/src/ngsw-config.json
+++ b/interfaces/HO-Portal/src/ngsw-config.json
@@ -20,7 +20,7 @@
       "resources": {
         "files": [
           "/assets/**",
-          "/svg/**",
+          "/svg/md*",
           "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
         ]
       }
