--- a/interfaces/AW-App/package.json
+++ b/interfaces/AW-App/package.json
@@ -56,7 +56,7 @@
     "@ionic/angular-toolkit": "^1.5.1",
     "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.0.13",
+    "@types/node": "10.x",
     "codelyzer": "^5.2.2",
     "dotenv": "^8.2.0",
     "jasmine-core": "^3.5.0",
