--- a/interfaces/HO-Portal/package.json
+++ b/interfaces/HO-Portal/package.json
@@ -57,7 +57,7 @@
     "@types/file-saver": "^2.0.1",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.0.1",
+    "@types/node": "10.x",
     "codelyzer": "^5.2.2",
     "dotenv": "^8.2.0",
     "jasmine-core": "^3.5.0",
