--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -68,7 +68,7 @@
     "@ionic/angular-toolkit": "^1.5.1",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.0.13",
+    "@types/node": "10.x",
     "codelyzer": "^5.2.2",
     "cordova": "^9.0.0",
     "cordova-plugin-device": "^2.0.3",
