--- a/services/121-service/package.json
+++ b/services/121-service/package.json
@@ -54,7 +54,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.4",
+    "@types/node": "10.x",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.2",
     "atob": ">=2.1.0",
