--- a/services/PA-accounts-service/package.json
+++ b/services/PA-accounts-service/package.json
@@ -51,7 +51,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.4",
+    "@types/node": "10.x",
     "atob": ">=2.1.0",
     "deep-extend": ">=0.5.1",
     "eslint": "^5.0.0",
