--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -123,6 +123,7 @@ services:
       - PORT_121_SERVICE=${PORT_121_SERVICE}
       - SUBDOMAIN_121_SERVICE=${SUBDOMAIN_121_SERVICE}
       - URL_PA_ACCOUNTS_SERVICE_API=${URL_PA_ACCOUNTS_SERVICE_API}
+      - NODE_ENV=${NODE_ENV_121}
     volumes:
       - "./121-service:/home/121/services/121-service"
     ports:
@@ -147,6 +148,7 @@ services:
       - PORT_PA_ACCOUNTS_SERVICE=${PORT_PA_ACCOUNTS_SERVICE}
       - SUBDOMAIN_PA_ACCOUNTS_SERVICE=${SUBDOMAIN_PA_ACCOUNTS_SERVICE}
       - URL_121_SERVICE_API=${URL_121_SERVICE_API}
+      - NODE_ENV=${NODE_ENV_PA}
     volumes:
       - "./PA-accounts-service:/home/121/services/PA-accounts-service"
     ports:
