AB#2368 just 1 NODE_ENV var needed

--- a/services/.env.example
+++ b/services/.env.example
@@ -1,5 +1,6 @@
 # -- All Services:
 POSTGRES_PASSWORD=
+NODE_ENV=
 
 # -- 121-service:
 IPV4_121_SERVICE=11.0.0.7
@@ -9,7 +10,6 @@ SUBDOMAIN_121_SERVICE=
 # SUBDOMAIN_121_SERVICE examples: local: servers: PA-accounts
 EXTERNAL_121_SERVICE_URL=
 URL_PA_ACCOUNTS_SERVICE_API=http://11.0.0.8:3001/api
-NODE_ENV_121=
 
 # -- PA-Accounts-service:
 IPV4_PA_ACCOUNTS_SERVICE=11.0.0.8
@@ -18,5 +18,4 @@ SUBDOMAIN_PA_ACCOUNTS_SERVICE=
 # SUBDOMAIN_121_SERVICE examples: local: servers: 121-service
 URL_121_SERVICE_API=http://11.0.0.7:3000/api
 WALLET_PASSWORD_ENCRYPTION_KEY=
-NODE_ENV_PA=
 
