Align/update/cleanup services READMEs + Add .env-variable explanations

--- a/services/.env.example
+++ b/services/.env.example
@@ -1,21 +1,45 @@
-# -- All Services:
+# -------------
+# All Services:
+# -------------
+# Database password used for all services
 POSTGRES_PASSWORD=
+
+# Specify/override the NODE_ENV used for all services. For example `development`, `production`, etc.
 NODE_ENV=
 
-# -- 121-service:
+
+# ------------
+# 121-service:
+# ------------
+# Specify a long/secure secret to enable the full reset of the database via an API-endpoint
+RESET_SECRET=
+
+# When this service is deployed on the same host/port as the other service, specify a unique subdomain/sub-folder
+SUBDOMAIN_121_SERVICE=
+
+# Specify connection details for the 'internal' docker-network
 IPV4_121_SERVICE=11.0.0.7
 PORT_121_SERVICE=3000
-RESET_SECRET=
-SUBDOMAIN_121_SERVICE=
-# SUBDOMAIN_121_SERVICE examples: local: servers: PA-accounts
-EXTERNAL_121_SERVICE_URL=
+
+# Internal connection details of the PA-Accounts-service
 URL_PA_ACCOUNTS_SERVICE_API=http://11.0.0.8:3001/api
 
-# -- PA-Accounts-service:
-IPV4_PA_ACCOUNTS_SERVICE=11.0.0.8
-PORT_PA_ACCOUNTS_SERVICE=3001
-SUBDOMAIN_PA_ACCOUNTS_SERVICE=
-# SUBDOMAIN_121_SERVICE examples: local: servers: 121-service
-URL_121_SERVICE_API=http://11.0.0.7:3000/api
+# External connection details of the 121-service
+EXTERNAL_121_SERVICE_URL=
+
+
+# --------------------
+# PA-Accounts-service:
+# --------------------
+# Specify a long/secure secret that is used to encrypt PA/user data
 WALLET_PASSWORD_ENCRYPTION_KEY=
 
+# When this service is deployed on the same host/port as the other service, specify a unique subdomain/sub-folder
+SUBDOMAIN_PA_ACCOUNTS_SERVICE=
+
+# Specify connection details for the 'internal' docker-network
+IPV4_PA_ACCOUNTS_SERVICE=11.0.0.8
+PORT_PA_ACCOUNTS_SERVICE=3001
+
+# Internal connection details of the 121-service
+URL_121_SERVICE_API=http://11.0.0.7:3000/api
