--- a/services/.env.example
+++ b/services/.env.example
@@ -4,7 +4,7 @@
 # Database password used for all services
 POSTGRES_PASSWORD=
 
-# Specify/override the NODE_ENV used for all services. For example `development`, `production`, etc.
+# Specify/override the NODE_ENV used for all services. For example `development`, `production`, `staging` etc.
 NODE_ENV=
 
 
