Exclude API-request from handling/caching by the service-worker

--- a/interfaces/AW-App/src/ngsw-config.json
+++ b/interfaces/AW-App/src/ngsw-config.json
@@ -1,5 +1,19 @@
 {
   "index": "/index.html",
+  "dataGroups": [
+    {
+      "name": "api",
+      "urls": [
+        "**/api/**"
+      ],
+      "cacheConfig": {
+        "strategy": "freshness",
+        "maxSize": 1,
+        "maxAge": "1s",
+        "timeout": "1s"
+      }
+    }
+  ],
   "assetGroups": [
     {
       "name": "app",
