AB#2649 update possible NODE_ENV values

--- a/services/.env.example
+++ b/services/.env.example
@@ -4,7 +4,7 @@
 # Database password used for all services
 POSTGRES_PASSWORD=
 
-# Specify/override the NODE_ENV used for all services. For example `development`, `production`, `staging` etc.
+# Specify/override the NODE_ENV used for all services. Allowed values: `development`, `test`, `staging`, `production`
 NODE_ENV=
 
 
