--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "start:all": "npx npm-run-all --print-label --parallel start:services start:interfaces",
     "start:services": "cd services/ && docker-compose -f  docker-compose.yml -f  docker-compose.development.yml up -d --build",
     "start:interfaces": "npx npm-run-all --print-label --parallel start:pa start:aw start:ho",
-    "start:pa": "npm start --prefix $npm_package_config_path_pa -- --port 8008",
-    "start:aw": "npm start --prefix $npm_package_config_path_aw -- --port 8080",
-    "start:ho": "npm start --prefix $npm_package_config_path_ho -- --port 8888",
+    "start:pa": "npm start --prefix \"$npm_package_config_path_pa\" -- --port 8008",
+    "start:aw": "npm start --prefix \"$npm_package_config_path_aw\" -- --port 8080",
+    "start:ho": "npm start --prefix \"$npm_package_config_path_ho\" -- --port 8888",
     "install:all": "npx npm-run-all --print-label install:services install:interfaces",
     "install:services": "cd services/ && docker-compose up -d --build --force-recreate",
     "install:interfaces": "npx npm-run-all --print-label install:pa install:aw install:ho",
-    "install:pa": "npm install --no-optional --no-audit --no-fund --prefix $npm_package_config_path_pa",
-    "install:aw": "npm install --no-optional --no-audit --no-fund --prefix $npm_package_config_path_aw",
-    "install:ho": "npm install --no-optional --no-audit --no-fund --prefix $npm_package_config_path_ho",
+    "install:pa": "npm install --no-optional --no-audit --no-fund --prefix \"$npm_package_config_path_pa\"",
+    "install:aw": "npm install --no-optional --no-audit --no-fund --prefix \"$npm_package_config_path_aw\"",
+    "install:ho": "npm install --no-optional --no-audit --no-fund --prefix \"$npm_package_config_path_ho\"",
     "open:all": "npx npm-run-all open:121-service open:pa-accounts open:aw open:pa open:ho",
     "open:pa": "open http://localhost:8008/",
     "open:aw": "open http://localhost:8080/",
