Remove config-variables, hard-code paths (for now)

--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
   "name": "121-platform",
   "private": true,
-  "config": {
-    "path_pa": "interfaces/PA-App/",
-    "path_aw": "interfaces/AW-App/",
-    "path_ho": "interfaces/HO-Portal/"
-  },
   "scripts": {
     "start": "npm run help",
     "demo": "npx npm-run-all --print-label --parallel start:all open:all",
     "start:all": "npx npm-run-all --print-label --parallel start:services start:interfaces",
     "start:services": "cd services/ && docker-compose -f  docker-compose.yml -f  docker-compose.development.yml up -d --build",
     "start:interfaces": "npx npm-run-all --print-label --parallel start:pa start:aw start:ho",
-    "start:pa": "npm start --prefix \"$npm_package_config_path_pa\" -- --port 8008",
-    "start:aw": "npm start --prefix \"$npm_package_config_path_aw\" -- --port 8080",
-    "start:ho": "npm start --prefix \"$npm_package_config_path_ho\" -- --port 8888",
+    "start:pa": "npm start --prefix interfaces/PA-App/ -- --port 8008",
+    "start:aw": "npm start --prefix interfaces/AW-App/ -- --port 8080",
+    "start:ho": "npm start --prefix interfaces/HO-Portal/ -- --port 8888",
     "install:all": "npx npm-run-all --print-label install:services install:interfaces",
     "install:services": "cd services/ && docker-compose up -d --build --force-recreate",
     "install:interfaces": "npx npm-run-all --print-label install:pa install:aw install:ho",
-    "install:pa": "npm install --no-optional --no-audit --no-fund --prefix \"$npm_package_config_path_pa\"",
-    "install:aw": "npm install --no-optional --no-audit --no-fund --prefix \"$npm_package_config_path_aw\"",
-    "install:ho": "npm install --no-optional --no-audit --no-fund --prefix \"$npm_package_config_path_ho\"",
+    "install:pa": "npm install --no-optional --no-audit --no-fund --prefix interfaces/PA-App/",
+    "install:aw": "npm install --no-optional --no-audit --no-fund --prefix interfaces/AW-App/",
+    "install:ho": "npm install --no-optional --no-audit --no-fund --prefix interfaces/HO-Portal/",
     "open:all": "npx npm-run-all open:121-service open:pa-accounts open:aw open:pa open:ho",
     "open:pa": "open http://localhost:8008/",
     "open:aw": "open http://localhost:8080/",
