--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "121-platform",
   "private": true,
   "scripts": {
-    "start": "npm run help",
+    "start": "echo 'See README.md#getting-started \\n\\n'",
     "demo": "npx npm-run-all --print-label --parallel start:all open:all",
     "start:all": "npx npm-run-all --print-label --parallel start:services start:interfaces",
     "start:services": "cd services/ && docker-compose -f  docker-compose.yml -f  docker-compose.development.yml up -d --build",
@@ -22,8 +22,15 @@
     "open:ho": "open http://localhost:8888/",
     "open:121-service": "open http://localhost:3000/docs/",
     "open:pa-accounts": "open http://localhost:3001/docs/",
-    "test": "echo 'Nothing to test here. See __README.md#testing__. \n\n' && exit 1",
-    "install": "echo 'Nothing to install here. See __README.md#getting-started__. \n\n' && exit 1",
-    "help": "echo 'See __README.md#getting-started__.\n\n'"
+    "test": "echo 'See README.md#testing \\n\\n' && npm run test:all",
+    "test:all": "npx npm-run-all --print-label --parallel test:interfaces test:services",
+    "test:services": "npx npm-run-all --print-label --parallel test:121-service test:PA-accounts-service",
+    "test:121-service": "npm test --prefix services/121-service/",
+    "test:PA-accounts-service": "npm test --prefix services/PA-accounts-service/",
+    "test:interfaces": "npx npm-run-all --print-label --parallel test:pa test:aw test:ho",
+    "test:pa": "npm test --prefix interfaces/PA-App/",
+    "test:aw": "npm test --prefix interfaces/AW-App/",
+    "test:ho": "npm test --prefix interfaces/HO-Portal/",
+    "install": "echo 'Nothing to install here. See README.md#getting-started \\n\\n' && exit 1"
   }
 }
