--- a/interfaces/AW-App/package.json
+++ b/interfaces/AW-App/package.json
@@ -33,13 +33,13 @@
     "@angular/service-worker": "^7.2.16",
     "@auth0/angular-jwt": "^4.1.2",
     "@ionic/angular": "^4.11.8",
-    "@ionic/cli": "^6.10.0",
+    "@ionic/cli": "^6.11.0",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@zxing/ngx-scanner": "^2.0.1",
     "core-js": "2.6.8",
-    "rxjs": "^6.5.5",
+    "rxjs": "^6.6.2",
     "tslib": "^1.12.0",
     "zone.js": "~0.8.29"
   },
@@ -53,14 +53,14 @@
     "@angular/compiler-cli": "^7.2.16",
     "@angular/language-service": "^7.2.16",
     "@ionic/angular-toolkit": "^1.5.1",
-    "@types/jasmine": "~3.5.10",
+    "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "10.x",
     "codelyzer": "^5.2.2",
     "dotenv": "^8.2.0",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~5.0.2",
-    "karma": "^5.1.0",
+    "karma": "^5.1.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "~3.3.1",
