Let webhook.js decide to auto-update to hotfix-releases

--- a/tools/.env.example
+++ b/tools/.env.example
@@ -1,6 +1,11 @@
-# Variables used in deploy script
+# Variables used in deploy script / by webhook
 
+# Location of web-apps + VERSION file
+# Used by: `deploy.sh`, `webhook.js`
 GLOBAL_121_WEB_ROOT=/var/www/121-platform
+
+# Relative paths/folder-names of each interface
+# Used by: `deploy.sh`
 GLOBAL_121_PA_DIR=PA-app
 GLOBAL_121_AW_DIR=AW-app
 GLOBAL_121_HO_DIR=HO-portal
