--- a/interfaces/AW-App/package.json
+++ b/interfaces/AW-App/package.json
@@ -65,6 +65,7 @@
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "~3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-phantomjs-launcher": "^1.0.4",
     "prettier": "2.0.5",
     "prettier-plugin-organize-imports": "^1.1.1",
     "protractor": "^7.0.0",
