AB#2822 add ref-app to apache2 conf

--- a/tools/121-platform-https.conf
+++ b/tools/121-platform-https.conf
@@ -138,6 +138,9 @@
   <Directory "/var/www/121-platform/HO-portal/">
     FallbackResource /HO-portal/index.html
   </Directory>
+  <Directory "/var/www/121-platform/Referral-app/">
+    FallbackResource /Referral-app/index.html
+  </Directory>
 
 
 </VirtualHost>
