--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -98,3 +98,32 @@ updates:
   - dependency-name: angularx-qrcode
     versions:
     - ">= 2.1"
+
+- package-ecosystem: npm
+  directory: "/interfaces/Referral-App"
+  schedule:
+    interval: weekly
+  open-pull-requests-limit: 3
+  versioning-strategy: increase-if-necessary
+  ignore:
+  - dependency-name: "@angular/*"
+    versions:
+    - ">= 8, >= 0.800"
+  - dependency-name: "@angular-devkit/*"
+    versions:
+    - ">= 0.800"
+  - dependency-name: "@types/node"
+    versions:
+    - ">= 11"
+  - dependency-name: tslint
+    versions:
+    - ">= 6"
+  - dependency-name: core-js
+    versions:
+    - ">= 3"
+  - dependency-name: tslib
+    versions:
+    - ">= 2"
+  - dependency-name: "@ngx-translate/http-loader"
+    versions:
+    - ">= 5"
