--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -48,6 +48,9 @@ updates:
   - dependency-name: "@angular-devkit/*"
     versions:
     - ">= 0.800"
+  - dependency-name: "@ionic/storage"
+    versions:
+    - ">= 2.3.0"
   - dependency-name: "@types/node"
     versions:
     - ">= 11"
@@ -83,6 +86,9 @@ updates:
   - dependency-name: "@angular-devkit/*"
     versions:
     - ">= 0.800"
+  - dependency-name: "@ionic/storage"
+    versions:
+    - ">= 2.3.0"
   - dependency-name: "@types/node"
     versions:
     - ">= 11"
@@ -121,6 +127,9 @@ updates:
   - dependency-name: "@angular-devkit/*"
     versions:
     - ">= 0.800"
+  - dependency-name: "@ionic/storage"
+    versions:
+    - ">= 2.3.0"
   - dependency-name: "@types/node"
     versions:
     - ">= 11"
