--- a/interfaces/PA-App/.env.example
+++ b/interfaces/PA-App/.env.example
@@ -12,7 +12,7 @@ NG_USE_ANIMATION=true
 NG_ALWAYS_SHOW_TEXT_PLAYER=false
 NG_LOCAL_STORAGE=false
 
-NG_LOCALES=en,sa_KE,la2_KE
+NG_LOCALES=en
 
 NG_URL_121_SERVICE_API=
 NG_URL_PA_ACCOUNT_SERVICE_API=
