--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -40,7 +40,7 @@
     "@ionic-native/status-bar": "^5.16.0",
     "@ionic/angular": "^4.11.8",
     "@ionic/cli": "^6.11.0",
-    "@ionic/storage": "^2.2.0",
+    "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@zxing/ngx-scanner": "^2.0.1",
