--- a/interfaces/Referral-App/package.json
+++ b/interfaces/Referral-App/package.json
@@ -34,7 +34,7 @@
     "@auth0/angular-jwt": "^4.1.2",
     "@ionic/angular": "^4.11.8",
     "@ionic/cli": "^6.11.0",
-    "@ionic/storage": "^2.2.0",
+    "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@zxing/ngx-scanner": "^2.0.1",
