AB#3309 Add check to prevent broken build when missing translations-file(s)

--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -12,8 +12,9 @@
     "dev:local-ios": "npm run ionic -- cordova run ios --consolelogs --livereload",
     "dev:local": "npm run ionic -- cordova run browser --consolelogs --livereload",
     "generate-assets-audio": "node ./_generate-assets-audio.js",
+    "check-assets-translations": "node ./_check-assets-translations.js",
     "set-env-variables": "node ./_set-env-variabes.js",
-    "prebuild": "npm run set-env-variables && npm run generate-assets-audio -- en",
+    "prebuild": "npm run set-env-variables && npm run check-assets-translations && npm run generate-assets-audio -- en",
     "build": "ng build",
     "prebuild:native": "npm run prebuild",
     "build:native": "npm run ionic -- cordova build android ",
