AB#3091 Simplify docker configuration for Node services + update development workflow

--- a/services/PA-accounts-service/Dockerfile
+++ b/services/PA-accounts-service/Dockerfile
@@ -1,27 +1,11 @@
-FROM ubuntu:16.04
+FROM node:10.22-alpine
 
-ARG uid=1000
-RUN apt-get update && \
-  apt-get install -y \
-  curl \
-  build-essential \
-  pkg-config \
-  cmake \
-  libssl-dev \
-  libsqlite3-dev \
-  libzmq3-dev \
-  libncursesw5-dev \
-  software-properties-common \
-  apt-transport-https
+WORKDIR /home/node/app
 
-RUN curl -sL https://deb.nodesource.com/setup_10.x | bash -
-RUN apt-get install -y nodejs
+COPY ./package*.json ./
 
-RUN mkdir --parents /home/121/services/PA-accounts-service/
-WORKDIR /home/121/services/PA-accounts-service/
-
-COPY package*.json ./
 RUN npm ci
 
-# Regular:
+COPY . .
+
 CMD ["npm", "start"]
