--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -60,7 +60,6 @@ services:
       - "50002:50002"
     healthcheck:
       test: "exit 0"
-    restart: unless-stopped
     networks:
       pool_network:
         ipv4_address: 11.0.0.4
@@ -82,7 +81,6 @@ services:
       - "./logs-volume:/var/log/userims"
     healthcheck:
       test: "exit 0"
-    restart: on-failure
     ports:
       - "50003:50003"
     networks:
@@ -114,9 +112,9 @@ services:
   121-service:
     build:
       context: 121-service
-      dockerfile: Dockerfile
     init: true
     container_name: 121-service
+    user: node
     environment:
       - EXTERNAL_121_SERVICE_URL=${EXTERNAL_121_SERVICE_URL}
       - RESET_SECRET=${RESET_SECRET}
@@ -125,7 +123,7 @@ services:
       - URL_PA_ACCOUNTS_SERVICE_API=${URL_PA_ACCOUNTS_SERVICE_API}
       - NODE_ENV=${NODE_ENV}
     volumes:
-      - "./121-service:/home/121/services/121-service"
+      - "./121-service:/home/node/app"
     ports:
       - "${PORT_121_SERVICE}:${PORT_121_SERVICE}"
     stdin_open: true
@@ -139,10 +137,10 @@ services:
   PA-accounts-service:
     build:
       context: PA-accounts-service
-      dockerfile: Dockerfile
-    image: pa-accounts-node
+    image: services_pa-accounts-service
     init: true
-    container_name: PA-accounts-service
+    container_name: pa-accounts-service
+    user: node
     environment:
       - WALLET_PASSWORD_ENCRYPTION_KEY=${WALLET_PASSWORD_ENCRYPTION_KEY}
       - PORT_PA_ACCOUNTS_SERVICE=${PORT_PA_ACCOUNTS_SERVICE}
@@ -150,7 +148,7 @@ services:
       - URL_121_SERVICE_API=${URL_121_SERVICE_API}
       - NODE_ENV=${NODE_ENV}
     volumes:
-      - "./PA-accounts-service:/home/121/services/PA-accounts-service"
+      - "./PA-accounts-service:/home/node/app"
     ports:
       - "${PORT_PA_ACCOUNTS_SERVICE}:${PORT_PA_ACCOUNTS_SERVICE}"
     stdin_open: true
