--- a/services/121-service/Dockerfile
+++ b/services/121-service/Dockerfile
@@ -1,35 +1,11 @@
-FROM ubuntu:16.04
+FROM node:10.22-alpine
 
-ARG uid=1000
-RUN apt-get update && \
-  apt-get install -y \
-  curl \
-  build-essential \
-  pkg-config \
-  cmake \
-  libssl-dev \
-  libsqlite3-dev \
-  libzmq3-dev \
-  libncursesw5-dev \
-  software-properties-common \
-  apt-transport-https
+WORKDIR /home/node/app
 
+COPY ./package*.json ./
 
-RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys CE7709D068DB5E88
-RUN add-apt-repository "deb https://repo.sovrin.org/sdk/deb xenial stable"
-RUN apt-get update && apt-get install -y libindy
-
-
-RUN curl -sL https://deb.nodesource.com/setup_10.x | bash -
-RUN apt-get install -y nodejs
-
-
-RUN mkdir --parents /home/121/services/121-service/
-WORKDIR /home/121/services/121-service/
-
-COPY package*.json ./
 RUN npm ci
 
-# Regular:
-CMD ["npm", "start"]
+COPY . .
 
+CMD ["npm", "start"]
