--- a/services/docker-compose.development.yml
+++ b/services/docker-compose.development.yml
@@ -1,7 +1,22 @@
 version: '3.7'
 
+# The settings from this file will override the values from `docker-compose.yml`
+# When run via:
+#     docker-compose -f docker-compose.yml -f docker-compose.development.yml
+
+# For debugging:
+#
+# Make the service boot and wait:
+#     command: "tail -f /dev/null"
+#
+
 services:
   121-service:
-    command: ["npm", "run", "start:dev"]
+    # For use on macOS: to speed up the start-up process, uncomment:
+    # volumes: ["./121-service:/home/node/app:cached"]
+    command: "npm run start:dev"
+
   PA-accounts-service:
-    command: ["npm", "run", "start:dev"]
+    # For use on macOS: to speed up the start-up process, uncomment:
+    # volumes: ["./PA-accounts-service:/home/node/app:cached"]
+    command: "npm run start:dev"
