AB#3181 moving configs

--- a/services/.env.example
+++ b/services/.env.example
@@ -28,6 +28,14 @@ URL_PA_ACCOUNTS_SERVICE_API=http://11.0.0.8:3001/api
 EXTERNAL_121_SERVICE_URL=
 
 
+# SECRETS
+
+
+# ORMCONFIG
+
+
+
+
 # --------------------
 # PA-Accounts-service:
 # --------------------
