AB#3181 moving configs

--- a/services/.env.example
+++ b/services/.env.example
@@ -29,11 +29,34 @@ EXTERNAL_121_SERVICE_URL=
 
 
 # SECRETS
+SECRETS_SECRET_=secret-key
+SECRETS_passwordAdmin=password
+SECRETS_emailAdmin=admin@example.org
+SECRETS_passwordAidWorker=password
+SECRETS_emailAidWorker=aidworker@example.org
+SECRETS_passwordProjectOfficer=password
+SECRETS_emailProjectOfficer=project-officer@example.org
+SECRETS_passwordProgramManager=password
+SECRETS_emailProgramManager=program-manager@example.org
+SECRETS_countryId=1
 
 
 # ORMCONFIG
-
-
+ORMCONFIG_TYPE:postgres
+ORMCONFIG_host=121db
+ORMCONFIG_port=5432
+ORMCONFIG_username=global121
+ORMCONFIG_password=<secret>
+ORMCONFIG_database=global121
+ORMCONFIG_schema=121-service
+ORMCONFIG_entities=src/**/**.entity{.ts,.js}
+ORMCONFIG_migrationsTableName=custom_migration_table
+ORMCONFIG_migrations=migration/*.ts
+ORMCONFIG_cli=migration
+ORMCONFIG_dropSchema=false
+ORMCONFIG_synchronize=true
+ORMCONFIG_logging=query
+ORMCONFIG_logger=file
 
 
 # --------------------
