AB#3181 PB#969 moving configs

--- a/services/.env.example
+++ b/services/.env.example
@@ -40,23 +40,12 @@ SECRETS_passwordProgramManager=password
 SECRETS_emailProgramManager=program-manager@example.org
 SECRETS_countryId=1
 
+#THIRD PARTY TOKENS
+TWILIO=1
+INTERSOLVE=1
+AFRICASTALKING=1
 
 # ORMCONFIG
-ORMCONFIG_TYPE:postgres
-ORMCONFIG_host=121db
-ORMCONFIG_port=5432
-ORMCONFIG_username=global121
-ORMCONFIG_password=<secret>
-ORMCONFIG_database=global121
-ORMCONFIG_schema=121-service
-ORMCONFIG_entities=src/**/**.entity{.ts,.js}
-ORMCONFIG_migrationsTableName=custom_migration_table
-ORMCONFIG_migrations=migration/*.ts
-ORMCONFIG_cli=migration
-ORMCONFIG_dropSchema=false
-ORMCONFIG_synchronize=true
-ORMCONFIG_logging=query
-ORMCONFIG_logger=file
 
 
 # --------------------
@@ -74,3 +63,10 @@ PORT_PA_ACCOUNTS_SERVICE=3001
 
 # Internal connection details of the 121-service
 URL_121_SERVICE_API=http://11.0.0.7:3000/api
+
+
+#SECRETS
+PA_USERCONFIG_password=password
+PA_USERCONFIG_username=test-pa
+
+#ORMCONFIG
