AB#3181 PB#969 moving configs

--- a/services/.env.example
+++ b/services/.env.example
@@ -29,21 +29,21 @@ EXTERNAL_121_SERVICE_URL=
 
 
 # SECRETS
-SECRETS_SECRET_=secret-key
-SECRETS_passwordAdmin=password
-SECRETS_emailAdmin=admin@example.org
-SECRETS_passwordAidWorker=password
-SECRETS_emailAidWorker=aidworker@example.org
-SECRETS_passwordProjectOfficer=password
-SECRETS_emailProjectOfficer=project-officer@example.org
-SECRETS_passwordProgramManager=password
-SECRETS_emailProgramManager=program-manager@example.org
-SECRETS_countryId=1
+121_SERVICE_SECRETS_SECRET_=secret-key
+121_SERVICE_USERCONFIG_passwordAdmin=password
+121_SERVICE_USERCONFIG_emailAdmin=admin@example.org
+121_SERVICE_USERCONFIG_passwordAidWorker=password
+121_SERVICE_USERCONFIG_emailAidWorker=aidworker@example.org
+121_SERVICE_USERCONFIG_passwordProjectOfficer=password
+121_SERVICE_USERCONFIG_emailProjectOfficer=project-officer@example.org
+121_SERVICE_USERCONFIG_passwordProgramManager=password
+121_SERVICE_USERCONFIG_emailProgramManager=program-manager@example.org
+121_SERVICE_USERCONFIG_countryId=1
 
 #THIRD PARTY TOKENS
-TWILIO=1
-INTERSOLVE=1
-AFRICASTALKING=1
+121_SERVICE_TWILIO=1
+121_SERVICE_INTERSOLVE=1
+121_SERVICE_AFRICASTALKING=1
 
 # ORMCONFIG
 
